# ruok

./: LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ruok/: __init__.py  ruok.py
tests/: catch_async_test.py  catch_test.py  match_test.py  ok_err_test.py  result_types_test.py  type_guards_test.py
tests/type_checking/: test_ruok.yml
