[project]
name = "ruok"
description = "KISS errors as values for Python"
readme = "README.md"
keywords = ["errors-as-values", "railway oriented programming", "result"]
authors = [{ name = "Andre Mirończuk", email = "lajdre.dev@tuta.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [ ]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-mypy-plugins>=4.0.2",
]
ci = [
  "basedpyright>=1.39.3",
  "ruff>=0.15.12",
]

[project.urls]
Homepage = "https://github.com/sanepy/ruok"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "N818", "BLE001"]

[tool.ruff.lint.per-file-ignores]
"tests/*py" = ["S101", "ANN201", "ANN202", "INP001", "EM101", "EM102", "TRY003", "PLR2004"]

[tool.basedpyright]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
